Closed Bug 1052535 Opened 11 years ago Closed 11 years ago

[harfbuzz] fix error in Mandaic character shaping classes

Categories

(Core :: Graphics: Text, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: jfkthame, Assigned: jfkthame)

Details

Attachments

(1 file)

See https://bugs.freedesktop.org/show_bug.cgi?id=82306. An error in the Unicode joining-type data for Mandaic has recently been reported, and fixed in upstream harfbuzz commit d277c3d. We should take that fix so that Mandaic fonts can be used in Gecko correctly.
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Attachment #8471664 - Flags: review?(jdaggett) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: