bug 1052535 - fix errors in Unicode Joining_Type data for Mandaic. r=jdaggett